--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ which = "4.0.2"
 shadow-rs = "0.5.24"
 
 process_control = { version = "3.0.1", features = ["crossbeam-channel"] }
+async-std = "1.9.0"
 
 # Optional/http:
 attohttpc = { version = "0.16.3", optional = true, default-features = false, features = ["tls", "form"] }
