--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 license = "ISC"
 keywords = ["prompt", "shell", "bash", "fish", "zsh"]
 categories = ["command-line-utilities"]
+build = "build.rs"
 description = """
 The minimal, blazing-fast, and infinitely customizable prompt for any shell! ☄🌌️
 """
@@ -64,6 +65,8 @@ indexmap = "1.6.1"
 notify-rust = { version = "4.2.2", optional = true }
 semver = "0.11.0"
 which = "4.0.2"
+shadow-rs = "0.5.23"
+
 process_control = { version = "3.0.0", features = ["crossbeam-channel"] }
 
 # Optional/http:
@@ -82,6 +85,9 @@ winapi = { version = "0.3.9", features = [
 
 [target.'cfg(not(windows))'.dependencies]
 nix = "0.19.1"
+
+[build-dependencies]
+shadow-rs = "0.5.23"
 
 [dev-dependencies]
 tempfile = "3.2.0"
