--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ shadow-rs = "0.5.24"
 
 process_control = { version = "3.0.1", features = ["crossbeam-channel"] }
 async-std = "1.9.0"
+async-process = "1.0.2"
 futures = "0.3.13"
 
 # Optional/http:
