--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,10 +64,11 @@ jobs:
             os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
           
-          # TODO: switch to macOS-latest once it reaches 11.0
-          - target: aarch64-apple-darwin
-            os: macos-11.0
-            name: starship-aarch64-apple-darwin.tar.gz
+          # TODO: Enable once macos-11.0 pools are publicly available
+          # https://github.com/actions/virtual-environments/issues/2486
+          # - target: aarch64-apple-darwin
+          #   os: macos-11.0
+          #   name: starship-aarch64-apple-darwin.tar.gz
 
           - target: x86_64-pc-windows-msvc
             os: windows-latest
@@ -82,6 +83,7 @@ jobs:
             name: starship-aarch64-pc-windows-msvc.zip
 
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
