--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,6 +82,10 @@ jobs:
             os: windows-latest
             name: starship-aarch64-pc-windows-msvc.zip
 
+          - target: x86_64-unknown-freebsd
+            os: ubuntu-latest
+            name: starship-x86_64-unknown-freebsd.tar.gz
+
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
