--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
           - target: x86_64-apple-darwin
             os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
-          
+
           # TODO: Enable once macos-11.0 pools are publicly available
           # https://github.com/actions/virtual-environments/issues/2486
           # - target: aarch64-apple-darwin
@@ -73,11 +73,11 @@ jobs:
           - target: x86_64-pc-windows-msvc
             os: windows-latest
             name: starship-x86_64-pc-windows-msvc.zip
-          
+
           - target: i686-pc-windows-msvc
             os: windows-latest
             name: starship-i686-pc-windows-msvc.zip
-          
+
           - target: aarch64-pc-windows-msvc
             os: windows-latest
             name: starship-aarch64-pc-windows-msvc.zip
@@ -153,7 +153,7 @@ jobs:
       - name: Setup | Go
         uses: actions/setup-go@v2
         with:
-          go-version: "^1.13.1"
+          go-version: "^1.15.7"
 
       - name: Setup | Artifacts
         uses: actions/download-artifact@v2
@@ -163,7 +163,7 @@ jobs:
 
       - name: Setup | Release notes
         run: |
-          go get -u github.com/git-chglog/git-chglog/cmd/git-chglog
+          GO111MODULE=on go get github.com/git-chglog/git-chglog/cmd/git-chglog@0.9.1
           git-chglog -c .github/chglog/release.yml $(git describe --tags) > RELEASE.md
 
       - name: Build | Publish
