--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,11 +64,9 @@ jobs:
             os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
 
-          # TODO: Enable once macos-11.0 pools are publicly available
-          # https://github.com/actions/virtual-environments/issues/2486
-          # - target: aarch64-apple-darwin
-          #   os: macos-11.0
-          #   name: starship-aarch64-apple-darwin.tar.gz
+          - target: aarch64-apple-darwin
+            os: macOS-latest
+            name: starship-aarch64-apple-darwin.tar.gz
 
           - target: x86_64-pc-windows-msvc
             os: windows-latest
@@ -111,6 +109,9 @@ jobs:
 
       - name: Build | Build
         uses: actions-rs/cargo@v1
+        # TODO: Remove this once it's the default
+        env:
+           SDKROOT: /Library/Developer/CommandLineTools/SDKs/MacOSX11.1.sdk
         with:
           command: build
           args: --release --features tls-vendored --target ${{ matrix.target }}
