--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ notify-rust = { version = "4.3.0", optional = true }
 semver = "0.11.0"
 which = "4.0.2"
 shadow-rs = "0.5.24"
-async-std = "1.9.0"
+async-std = { version= "1.9.0", features = ["attributes"] }
 async-process = "1.0.2"
 futures = "0.3.13"
 
